--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
+    "chalk": "^5.3.0",
+    "cli-spinners": "^3.0.0",
     "consola": "^3.2.3",
+    "events": "^3.3.0",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "openai": "^4.24.1",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/public/server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
